<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_marginStart="68dp"
    android:layout_marginEnd="68dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:background="@drawable/difdialoghead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="22sp"
            android:textColor="#F65314"
            android:textStyle="bold"
            android:layout_margin="24dp"
            android:layout_centerInParent="true"
            android:text="@string/selectdif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <LinearLayout
        android:background="@drawable/difdialogbody"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/easy"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#333"
            android:textStyle="bold"
            android:paddingTop="36dp"
            android:text="@string/difeasy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/med"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#333"
            android:textStyle="bold"
            android:paddingTop="36dp"
            android:text="@string/difmedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/hard"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#333"
            android:textStyle="bold"
            android:paddingBottom="36dp"
            android:paddingTop="36dp"
            android:text="@string/difhard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>